Updates resource-optimization-common
Changelog:
- Patches the generated client code with ts-morph
- The code now complies with the rules of the api-report (produced by: `yarn build:api-reports`)
- Adds the api-report
- Updates the openapi.yaml
- Renames OrchestratorClient to OrchestratorApiClientProxy
