# workspaces/resource-optimization/plugins/resource-optimization-common/src/models/responses.ts
@@ -1,8 +1,15 @@
 /**
  * This is a copy of GetTokenResponse, to avoid importing resource-optimization-backend.
+ * 
+ * @public
  */
 export interface GetTokenResponse {
   accessToken: string;
   /** The Unix Epoch at which the token will expire  */
   expiresAt: number;
 }
+
+export type {
+  RecommendationBoxPlots,
+  RecommendationList,
+} from '../generated/models';
