# workspaces/resource-optimization/plugins/resource-optimization-common/src/schema/openapi.yaml
@@ -9,13 +9,10 @@ info:
 paths:
   /recommendations/openshift:
     get:
-      tags:
-        - Optimizations
       summary: Get all recommendations
       description: This feature is in limited preview for select customers
       externalDocs:
-        description:
-          Please refer to this blog post if you want to be included in the
+        description: Please refer to this blog post if you want to be included in the
           preview
         url: https://www.redhat.com/en/blog/red-hat-insights-brings-resource-optimization-red-hat-openshift
       operationId: getRecommendationList
@@ -30,8 +27,7 @@ paths:
               type: string
         - name: workload_type
           in: query
-          description:
-            Options are daemonset, deployment, deploymentconfig, replicaset,
+          description: Options are daemonset, deployment, deploymentconfig, replicaset,
             replicationcontroller, statefulset
           required: false
           schema:
@@ -93,8 +89,7 @@ paths:
             maximum: 100
         - name: order_by
           in: query
-          description:
-            Options are cluster, project, workload_type, workload, container,
+          description: Options are cluster, project, workload_type, workload, container,
             last_reported
           required: false
           schema:
@@ -108,13 +103,13 @@ paths:
             type: string
             example: DESC
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecommendationList'
-        '401':
+                $ref: "#/components/schemas/RecommendationList"
+        "401":
           description: User is not authorized
           content:
             text/plain:
@@ -123,12 +118,9 @@ paths:
                 example: User is not authorized to access the resource
   /recommendations/openshift/{recommendation_id}:
     get:
-      tags:
-        - Optimizations
       description: This feature is in limited preview for select customers
       externalDocs:
-        description:
-          Please refer to this blog post if you want to be included in the
+        description: Please refer to this blog post if you want to be included in the
           preview
         url: https://www.redhat.com/en/blog/red-hat-insights-brings-resource-optimization-red-hat-openshift
       operationId: getRecommendationById
@@ -162,13 +154,13 @@ paths:
             default: cores
       summary: Get recommendation for container
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json; charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/RecommendationBoxPlots'
-        '401':
+                $ref: "#/components/schemas/RecommendationBoxPlots"
+        "401":
           description: User is not authorized
           content:
             text/plain:
@@ -183,7 +175,7 @@ components:
         data:
           type: array
           items:
-            $ref: '#/components/schemas/Recommendations'
+            $ref: "#/components/schemas/Recommendations"
         meta:
           type: object
           properties:
@@ -287,11 +279,11 @@ components:
               type: object
               properties:
                 long_term:
-                  $ref: '#/components/schemas/LongTermRecommendation'
+                  $ref: "#/components/schemas/LongTermRecommendation"
                 medium_term:
-                  $ref: '#/components/schemas/MediumTermRecommendation'
+                  $ref: "#/components/schemas/MediumTermRecommendation"
                 short_term:
-                  $ref: '#/components/schemas/ShortTermRecommendation'
+                  $ref: "#/components/schemas/ShortTermRecommendation"
         source_id:
           type: string
           example: 0920ff0d-f1d6-4fe2-8bf3-18e6074bd27b
@@ -316,9 +308,9 @@ components:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     MediumTermRecommendation:
       type: object
       properties:
@@ -334,9 +326,9 @@ components:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     ShortTermRecommendation:
       type: object
       properties:
@@ -352,9 +344,9 @@ components:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     CostRecommendation:
       type: object
       properties:
@@ -634,11 +626,11 @@ components:
               type: object
               properties:
                 long_term:
-                  $ref: '#/components/schemas/LongTermRecommendationBoxPlots'
+                  $ref: "#/components/schemas/LongTermRecommendationBoxPlots"
                 medium_term:
-                  $ref: '#/components/schemas/MediumTermRecommendationBoxPlots'
+                  $ref: "#/components/schemas/MediumTermRecommendationBoxPlots"
                 short_term:
-                  $ref: '#/components/schemas/ShortTermRecommendationBoxPlots'
+                  $ref: "#/components/schemas/ShortTermRecommendationBoxPlots"
         source_id:
           type: string
           example: 0920ff0d-f1d6-4fe2-8bf3-18e6074bd27b
@@ -660,14 +652,14 @@ components:
           format: date-time
           example: 2023-06-02T00:45:00Z
         plots:
-          $ref: '#/components/schemas/PlotsData'
+          $ref: "#/components/schemas/PlotsData"
         recommendation_engines:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     MediumTermRecommendationBoxPlots:
       type: object
       properties:
@@ -680,14 +672,14 @@ components:
           format: date-time
           example: 2023-06-02T00:45:00Z
         plots:
-          $ref: '#/components/schemas/PlotsData'
+          $ref: "#/components/schemas/PlotsData"
         recommendation_engines:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     ShortTermRecommendationBoxPlots:
       type: object
       properties:
@@ -700,14 +692,14 @@ components:
           format: date-time
           example: 2023-06-02T00:45:00Z
         plots:
-          $ref: '#/components/schemas/PlotsData'
+          $ref: "#/components/schemas/PlotsData"
         recommendation_engines:
           type: object
           properties:
             cost:
-              $ref: '#/components/schemas/CostRecommendation'
+              $ref: "#/components/schemas/CostRecommendation"
             performance:
-              $ref: '#/components/schemas/PerformanceRecommendation'
+              $ref: "#/components/schemas/PerformanceRecommendation"
     PlotsData:
       type: object
       properties:
@@ -715,16 +707,16 @@ components:
           type: integer
           example: 4
         plots_data:
-          $ref: '#/components/schemas/PlotDetails'
+          $ref: "#/components/schemas/PlotDetails"
     PlotDetails:
       type: object
       additionalProperties:
         type: object
         properties:
           cpuUsage:
-            $ref: '#/components/schemas/cpuUsage'
+            $ref: "#/components/schemas/cpuUsage"
           memoryUsage:
-            $ref: '#/components/schemas/memoryUsage'
+            $ref: "#/components/schemas/memoryUsage"
     cpuUsage:
       type: object
       properties:
@@ -733,15 +725,15 @@ components:
           example: null
           nullable: true
         max:
-          $ref: '#/components/schemas/cpuUsageFloatComponent'
+          $ref: "#/components/schemas/cpuUsageFloatComponent"
         median:
-          $ref: '#/components/schemas/cpuUsageFloatComponent'
+          $ref: "#/components/schemas/cpuUsageFloatComponent"
         min:
-          $ref: '#/components/schemas/cpuUsageFloatComponent'
+          $ref: "#/components/schemas/cpuUsageFloatComponent"
         q1:
-          $ref: '#/components/schemas/cpuUsageFloatComponent'
+          $ref: "#/components/schemas/cpuUsageFloatComponent"
         q3:
-          $ref: '#/components/schemas/cpuUsageFloatComponent'
+          $ref: "#/components/schemas/cpuUsageFloatComponent"
     memoryUsage:
       type: object
       properties:
@@ -749,15 +741,15 @@ components:
           type: string
           example: Mi
         max:
-          $ref: '#/components/schemas/memoryUsageFloatComponent'
+          $ref: "#/components/schemas/memoryUsageFloatComponent"
         median:
-          $ref: '#/components/schemas/memoryUsageFloatComponent'
+          $ref: "#/components/schemas/memoryUsageFloatComponent"
         min:
-          $ref: '#/components/schemas/memoryUsageFloatComponent'
+          $ref: "#/components/schemas/memoryUsageFloatComponent"
         q1:
-          $ref: '#/components/schemas/memoryUsageFloatComponent'
+          $ref: "#/components/schemas/memoryUsageFloatComponent"
         q3:
-          $ref: '#/components/schemas/memoryUsageFloatComponent'
+          $ref: "#/components/schemas/memoryUsageFloatComponent"
     cpuUsageFloatComponent:
       type: number
       example: 0.05
